# AT2-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  appveyor.yml  conanfile.py  conanfile.txt  readme.md  readme.txt
applications/: drawable.cpp  drawable.h  mesh_renderer.h  procedural_meshes.cpp  procedural_meshes.h
applications/examples/: CMakeLists.txt  example_cube.h  example_gltf.h  main.cpp
applications/examples/resources/: simple_mesh.fs.glsl  simple_mesh.metal  simple_mesh.vs.glsl
applications/sandbox/: CMakeLists.txt  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  drawable.h  main.cpp
applications/test_task/: CMakeLists.txt  LinesHelper.cpp  LinesHelper.h  UI.cpp  UI.h  UIHandler.h  UiHandler.cpp  main.cpp
applications/test_task/data/shaders/: test.fs.glsl  test.vs.glsl
applications/test_task/resources/shaders/: background.fs.glsl  background.vs.glsl  curve.fs.glsl  curve.metal  curve.vs.glsl  simple.fs.glsl  simple.metal  simple.vs.glsl  window.fs.glsl  window.metal  window.vs.glsl
resources/: grass03.dds  rock04.dds
resources/shaders/: erosion.cs.glsl  generate.cs.glsl  mesh.fs.glsl  mesh.metal  mesh.vs.glsl  pbr.fs.glsl  postprocess.fs.glsl  postprocess.vs.glsl  raytrace_sky.fs.glsl  raytrace_sky.vs.glsl  skylight.fs.glsl  skylight.vs.glsl  spherelight.fs.glsl  spherelight.vs.glsl  spherelight2.fs.glsl  spherelight2.vs.glsl  terrain.fs.glsl  terrain.tcs.glsl  terrain.tes.glsl  terrain.vs.glsl
solution/: solution.sln
src/: AT2.h  AntonTech2.vcxproj  AntonTech2.vcxproj.allcreater.nvuser  AntonTech2.vcxproj.filters  Scene.h  StateManager.cpp  StateManager.h  drawable.h  log.cpp  log.h  main.cpp  packages.config  utils.hpp  utils_fileSystemListener.cpp
src/AT2/: AABB.h  AT2.h  AT2_exceptions.hpp  AT2_states.hpp  AT2_textures.hpp  AT2_types.hpp  Animation.cpp  Animation.h  BufferMapperGuard.h  CMakeLists.txt  Channel.h  Drawable.h  Mesh.h  MeshLoader.cpp  MeshLoader.h  Scene.cpp  Scene.h  StateManager.cpp  StateManager.h  TextureLoader.cpp  TextureLoader.h  UniformContainer.cpp  UniformContainer.h  camera.h  log.cpp  matrix_stack.h  utils.hpp  utils_fileSystemListener.cpp
src/AT2/Core/: ArrayBuffer.h  BufferMapperGuard.h  CMakeLists.txt  Mesh.h  StateManager.cpp  StateManager.h  UniformContainer.cpp  UniformContainer.h  camera.h  flags.hpp  generator.hpp  log.h  lru_cache.h  utils.hpp
src/AT2/Core/DataLayout/: BufferLayout.cpp  BufferLayout.h  IO.hpp  StructuredBuffer.cpp  StructuredBuffer.h
src/AT2/Core/Resources/: GltfSceneLoader.cpp  GltfSceneLoader.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.h  TextureLoader_devIL.cpp  TextureLoader_stb.cpp
src/AT2/Core/Scene/: Animation.cpp  Animation.h  Channel.h  Scene.h
src/AT2/Core/UI/: InputHelper.cpp  InputHelper.h  Plot.cpp  UI.h
src/AT2/OpenGL/: AT2lowlevel.h  GlDrawPrimitive.h  GlFrameBuffer.cpp  GlFrameBuffer.h  GlProgramIntrospection.cpp  GlProgramIntrospection.h  GlRenderer.cpp  GlRenderer.h  GlResourceFactory.cpp  GlShaderProgram.cpp  GlShaderProgram.h  GlStateManager.cpp  GlStateManager.h  GlTexture.cpp  GlTexture.h  GlTimerQuery.cpp  GlTimerQuery.h  GlUniformBuffer.cpp  GlUniformBuffer.h  GlUniformContainer.cpp  GlUniformContainer.h  GlVertexArray.cpp  GlVertexArray.h  GlVertexBuffer.cpp  GlVertexBuffer.h  Mappings.h
src/AT2/OpenGL/GLFW/: callback_types.cpp  callback_types.h  glfw_application.cpp  glfw_application.h  glfw_window.cpp  glfw_window.h
src/AT2/Platform/: Application.cpp  Application.h  Application_Metal.cpp  CMakeLists.txt  Common.h  Foundation.cpp  Foundation.h  GraphicsContextInterface.h  callback_types.h  readme.md
src/AT2/Platform/GLFW/: CMakeLists.txt  glfw_application.cpp  glfw_application.h  glfw_window.cpp  glfw_window.h
src/AT2/Platform/Renderers/Metal/: AT2lowlevel.h  Buffer.cpp  Buffer.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Mappings.h  MetalCpp.cpp  MtlStateManager.cpp  MtlStateManager.h  PipelineState.cpp  PipelineState.h  ProgramIntrospection.cpp  ProgramIntrospection.h  Renderer.cpp  Renderer.h  ResourceFactory.cpp  ResourceFactory.h  ShaderProgram.cpp  ShaderProgram.h  StateManager.cpp  StateManager.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/AT2/Platform/Renderers/OpenGL/: CMakeLists.txt  GlBuffer.cpp  GlBuffer.h  GlFrameBuffer.cpp  GlFrameBuffer.h  GlPipelineState.h  GlProgramIntrospection.cpp  GlProgramIntrospection.h  GlRenderer.cpp  GlRenderer.h  GlResourceFactory.cpp  GlShaderProgram.cpp  GlShaderProgram.h  GlStateManager.cpp  GlStateManager.h  GlTexture.cpp  GlTexture.h  GlTimerQuery.cpp  GlTimerQuery.h  GlUniformBuffer.cpp  GlUniformBuffer.h  GlVertexArray.cpp  GlVertexArray.h  GlVertexBuffer.cpp  Mappings.h
src/AT2/Platform/Renderers/OpenGL_4.1/: AT2lowlevel.h  CMakeLists.txt  GlBuffer.cpp  GlBuffer.h  GlFrameBuffer.cpp  GlFrameBuffer.h  GlPipelineState.h  GlProgramIntrospection.cpp  GlProgramIntrospection.h  GlRenderer.cpp  GlRenderer.h  GlResourceFactory.cpp  GlShaderProgram.cpp  GlShaderProgram.h  GlStateManager.cpp  GlStateManager.h  GlTexture.cpp  GlTexture.h  GlVertexArray.cpp  GlVertexArray.h  Mappings.h
src/AT2/Platform/SDL/: CMakeLists.txt  application.cpp  application.h  graphics_context.cpp  graphics_context.h  window.cpp  window.h
src/AT2/Resources/: DataSource.cpp  DataSource.h  GltfSceneLoader.cpp  GltfSceneLoader.h  MeshLoader.cpp  MeshLoader.h  MeshResource.cpp  MeshResource.h  ResourceManager.cpp  ResourceManager.h  ShaderResource.cpp  ShaderResource.h  TextureLoader.cpp  TextureLoader.h  TextureLoader_devIL.cpp  TextureLoader_stb.cpp  TextureResource.cpp  TextureResource.h
src/AT2/Scene/: Animation.cpp  Animation.h  Channel.h  Scene.h
src/AT2/UI/: InputHelper.cpp  InputHelper.h  InputVisitor.h  Plot.cpp  StackPanel.cpp  UI.cpp  UI.h
src/Debug/: AntonTech2.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  (+2 more)
src/Tests/: AABB.cpp  CMakeLists.txt  UI.cpp  generator.cpp
(+19 files in other folders)
